# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2015-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix integration test problems due to unicode stdout/stderr fix in
      the Python CloudI API and Python/C CloudI API
      (now the unbuffered stdout/stderr works with Python 3)

2015-03-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Initial changes for resource limits on OS processes used for
      external services

2015-03-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix unicode stdout/stderr usage with the Python CloudI API

2015-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change cloudi_service_hexpi to use cloudi_queue
    * Add more verification digits to the hexpi test

2015-03-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the hexpi test (avoid task timeouts after task size converges)
    * cloudi_service_map_reduce behaviour change with function
      cloudi_service_map_reduce_new changing from arity 4 to 5
    * Add cloudi_queue data structure

2015-03-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder
    * Improve the hexpi test

2015-02-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder

2015-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix write_truncate and write_append in cloudi_service_filesystem
      so they find existing files when using HTTP method
      suffixes on service names
    * Add the ability to use write_append in cloudi_service_filesystem
      with byte ranges that go outside the existing file boundary
      (gaps are filled with null characters)

2015-02-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout usage to cloudi_service_map_reduce for slow disk storage

2015-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Java 7 raw type warning in Java CloudI API

2015-02-07 Michael Truog   <mjtruog [at] gmail (dot) com>
